--- a/DreamTeamProj/src/main/resources/application.properties
+++ b/DreamTeamProj/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/dbproj
-jdbc.username = root
-jdbc.password =
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = true
-hibernate.format_sql = true
+spring.data.rest.basePath=/api
+spring.datasource.url=jdbc:mysql://localhost:3306/dbproj
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
