--- a/DreamTeamProj/src/main/webapp/package.json
+++ b/DreamTeamProj/src/main/webapp/package.json
@@ -20,6 +20,7 @@
     "gulp-babel": "^6.1.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
     "gulp-embedlr": "^0.5.2",
     "gulp-eslint": "^1.1.1",
     "gulp-filter": "^3.0.1",
@@ -35,6 +36,7 @@
     "jshint": "^2.9.1-rc2",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.11.0",
+    "mkdirp": "^0.5.1",
     "run-sequence": "^1.1.5",
     "tiny-lr": "^0.2.1",
     "wiredep": "^3.0.0"
